Bug 1181554 - Snap the spread radius for inset box shadows to device pixels. r=jrmuizel, a=lmandel